force-app/main/default/objects/LocationAssetCapacity__c/LocationAssetCapacity__c.object-meta.xml
<CustomObject>
    <label>Location Asset Capacity</label>
    <nameField>
        <displayFormat>LAC-{00000}</displayFormat>
        <label>Location Asset Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Asset Capacities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>