force-app/main/default/objects/LocationAssetCapacity__c/fields/AssetCapacity__c.field-meta.xml
<CustomField>
    <fullName>AssetCapacity__c</fullName>
    <inlineHelpText>Total number of assets of the selected type that are available for this location on this date.</inlineHelpText>
    <label>Asset Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>