force-app/main/default/objects/LocationAssetCapacity__c/fields/AssetType__c.field-meta.xml
<CustomField>
    <fullName>AssetType__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cart</fullName>
            </value>
            <value>
                <fullName>Sink</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>AB Cart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>