force-app/main/default/objects/LocationAssetCapacity__c/fields/AvailableCapacity__c.field-meta.xml
<CustomField>
    <fullName>AvailableCapacity__c</fullName>
    <inlineHelpText>Amount of remaining assets that can be reserved.</inlineHelpText>
    <label>Available Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>