force-app/main/default/objects/LocationAssetCapacity__c/fields/LocationDate__c.field-meta.xml
<CustomField>
    <fullName>LocationDate__c</fullName>
    <formula>CASESAFEID(Location__c) + TEXT( Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Date</label>
    <type>Text</type>
</CustomField>